# tvm

./: .gdb_history  .gitignore  Makefile  RegistryFuncs.txt  testdect.txt  workspace.tvm.code-workspace
apps/android_camera/app/: build.gradle
apps/android_camera/models/: prepare_model.py
apps/android_deploy/app/: build.gradle
apps/android_rpc/: build.gradle
apps/android_rpc/app/src/main/jni/: Android.mk  CMakeLists.txt
apps/android_rpc/app/src/main/jni/make/: config.mk
apps/bundle_deploy/: Makefile
apps/howto_deploy/: .gdb_history  RegistryFuncs.txt  cpp_deploy.cc  cpp_deploy_normal  cpp_deploy_pack  elfhack
apps/layers_dataset/: .gitignore  Dense_params.py  basic_params.py  classification_tree.py  extract_func.py  fromkeras.py  generate_param_value.py  generate_signle_op.py  getconfigs.py  lay.txt  layer_info.py  layer_param_pair.py  layers_list.xml  layers_list_test.xml  layers_param_data.py  layerssssssss.py  list.py  log.txt  param_type.py  read_layers.py  rename.py  rename_lable.py  test_tvm_signle_op.py  total_latency.tsv
build_standalone/: CMakeCache.txt  Makefile  cmake_install.cmake
build_standalone/libbacktrace/: Makefile  config.status  install-debuginfo-for-buildid.sh  libtool
cmake/: config.cmake
jvm/: pom.xml
src/ir/: expr.cc  transform.cc
src/runtime/: c_runtime_api.cc  dso_library.cc  object_internal.h
test/: deploy_prequantized_tflite.py  template_test.cc  test_ndarray_add.py
test/defuse_module/: run.py
test/mnist_run/: lib.c  lib_aot_diff.txt  lib_mnist.c  mnist_to_tvm.py  relay.txt  relay_render.txt  run_mnist_tvm.py  total_latency.tsv
tutorials/autotvm/: tune_relay_x86.py
tutorials/frontend/: from_darknet.py  from_tensorflow.py
tutorials/get_started/: relay_quick_start.py
tutorials/optimize/: opt_gemm.py
tutorials/tests/: test_relay_quick_start.py
(+74 files in other folders)
